# MandelbrotGenerator

./: CMakeLists.txt  Makefile  README.md  arrshift.c  arrshift.h  bexpr.c  bezier.c  big_fixed.c  big_fixed.h  big_int.c  big_int.h  bmp.c  bmp.h  cdouble.h  debug.h  fixed.c  fixed.h  fractalgen-zoom.sh  fractalgen.cpp  frgen_string.c  frgen_string.h  geometry.h  global.c  global.h  hue.c  hue.h  iterate.c  iterate.h  iterate.tpl.c  iterate.tpl.h  iterated.c  iterated.h  iteratef.c  iteratef.h  log.h  mandelbrot-itr-double.c  mandelbrot-itr.h  mandelbrot-zoom.sh  mandelbrot.cpp  mbarray.h  (+10 more)
frgen/: CMakeLists.txt  fractalgen.cpp  global.c  parse.c  plugin.c
git-hooks/: pre-commit
gui/mandelbrot/: pom.xml
gui/mandelbrot/src/main/java/com/romkas/mandelbrot/: DoublePoint.java  GUI.java  IntPoint.java
gui/mandelbrot/src/test/java/com/romkas/mandelbrot/: AppTest.java
include/: arrshift.h  bmp.h  fixed.h  frgen_string.h  global.h  mbthreading.h  mbutil.h  parse.h
include/fractalgen/: memmove.h  param_set.h  plugin.h
libfractalgen/: CMakeLists.txt  memmove.c  param_set.c  plugin.c
plugins/: CMakeLists.txt  julia-quadratic-float.c  mandelbrot-itr-double.c  mandelbrot-itr-float.c  render-rgb.c  render-rgb.h
test/: .CMakeLists.txt.swp  CMakeLists.txt
